--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/exo-2": "^5.2.8",
+    "@iconify-json/charm": "^1.2.3",
+    "@iconify-json/lucide": "^1.2.86",
+    "@iconify-json/mingcute": "^1.2.6",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.12",
     "astro-icon": "^1.1.5",
-    "tailwindcss": "^4.1.18"
+    "mongodb": "^7.0.0",
+    "tailwindcss": "^4.1.18",
+    "zod": "^3.25.76"
   }
 }
