--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^9.0.4",
     "@fontsource-variable/exo-2": "^5.2.8",
     "@iconify-json/charm": "^1.2.3",
     "@iconify-json/lucide": "^1.2.86",
